# private_information_retrieval

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  USAGE.sh  meson.build  meson_options.txt
doc/: main.tex
doc/img/: communication_index.drawio  communication_list.drawio
include/: bit_operations.h  exit_codes.h
src/client/: main.cpp
src/server/: data.txt  main.cpp
